[update] read fluid code from separate file